1998-11-16  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* tkobjc.m: Include defobj.h instead of objectbase/Arguments.h.

1998-11-13  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* WindowGeometryRecord.m ([WindowGeometryRecord -lispin:]): Handle
	either #: or : keyword syntax.
	([WindowGeometryRecord -lispout:]): Use #: keyword syntax.
	Add (make-objc) wrapper.

1998-11-12  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* internal.m: Include defobj.h instead of objectbase/Arguments.h.

	* WindowGeometryRecord.[hm] ([WindowGeometryRecord +lispin:expr:]): 
	Remove.
	([WindowGeometryRecord -lispin:]): Renamed from -in:.
	([WindowGeometryRecord -lispout:]): Renamed from -out:.

	* TkExtra.m: Include defobj.h instead of objectbase.h and
	objectbase/Arguments.h.

1998-11-09  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* ScheduleItem.h: Declare _drop_.

	* internal.m (tkobjc_pixmap_create): Reverse bit order for paletted
	bitmaps (less than 8 bits) for both Unix and Win32 code.

1998-10-30  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* ScheduleItem.m ([ScheduleItem -update]): Set processingUpdate
	during duration of method.
	([ScheduleItem -update]): Iterate through pendingEvents, stopping
	if pendingDrop occurs (instead of forEach:).
	([ScheduleItem -_drop_]): Contents of previous drop.
	([ScheduleItem -drop]): Call _drop_ if not processingUpdate otherwise
	set pendingDrop.

	* ScheduleItem.h (ScheduleItem): New status variables
	processingUpdate and pendingDrop.

1998-10-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* internal.m (tkobjc_pixmap_create_from_widget): Ignore return
	values of XChangeWindowAttributes, XMapWindow, XUnmapWindow -- they
	don't have one.

1998-10-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT): Increment.  Swarm 1.3.1 released.
	
	* internal.m (setSecondaryPath): Instead of $SWARMHOME/lib/ 
	use $SWARMHOME/../library/$dirname, where dirname is a new argument.